<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CheckoutActivity">

    <include
        android:id="@+id/header_root"
        layout="@layout/layout_tamato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/order_summary_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/your_order_summary"
        android:textSize="32sp"
        app:layout_constraintTop_toBottomOf="@id/header_root" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="20dp"
        app:layout_constraintBottom_toTopOf="@id/total"
        app:layout_constraintTop_toBottomOf="@id/order_summary_title">

        <TextView
            android:id="@+id/orders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:textSize="16sp"
            tools:text="x2 of Margherita for Rs. 320\nx2 of Double Cheese Margherita for Rs. 160" />
    </ScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/total"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@id/pay_now"
        app:layout_constraintLeft_toLeftOf="@id/pay_now" />

    <TextView
        android:id="@+id/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="sans-serif-thin"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@id/pay_now"
        app:layout_constraintRight_toRightOf="@id/pay_now"
        tools:text="Rs. 480" />

    <Button
        android:id="@+id/pay_now"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/pay_now"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>