<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <include
        android:id="@+id/header_root"
        layout="@layout/layout_tamato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone_number_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/phone_number"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        app:layout_constraintBottom_toTopOf="@id/phone_number_verify_text"
        app:layout_constraintLeft_toLeftOf="@id/button_phone_num_login"
        app:layout_constraintRight_toRightOf="@id/button_phone_num_login"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:prefixText="+91">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberSigned" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/phone_number_verify_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/phone_number_verify_text"
        app:layout_constraintBottom_toTopOf="@id/button_phone_num_login"
        app:layout_constraintLeft_toLeftOf="@id/button_phone_num_login"
        app:layout_constraintRight_toRightOf="@id/button_phone_num_login"
        app:layout_constraintTop_toBottomOf="@id/phone_number_input" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_phone_num_login"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phone_number_verify_text"
        app:layout_constraintWidth_percent="0.75" />

</androidx.constraintlayout.widget.ConstraintLayout>